--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 
 # external requirements
 alabaster==0.7.12
+anyio==2.1.0
 argon2-cffi==20.1.0
 async-generator==1.10
 attrs==20.3.0
@@ -30,16 +31,21 @@ ipywidgets==7.6.3
 jedi==0.18.0
 jinja2==2.11.3
 jmespath==0.10.0
+json5==0.9.5
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.11
 jupyter-console==6.2.0
 jupyter-core==4.7.1
+jupyter-server==1.3.0
+jupyterlab==3.0.8
 jupyterlab-pygments==0.1.2
+jupyterlab-server==2.2.1
 jupyterlab-widgets==1.0.0
 markupsafe==1.1.1
 mccabe==0.6.1
 mistune==0.8.4
+nbclassic==0.2.6
 nbclient==0.5.2
 nbconvert==6.0.7
 nbformat==5.1.2
@@ -73,6 +79,7 @@ rsa==4.5
 s3transfer==0.3.4
 send2trash==1.5.0
 six==1.15.0
+sniffio==1.2.0
 snowballstemmer==2.1.0
 sphinx==3.5.0
 sphinxcontrib-applehelp==1.0.2
