:heavy_plus_sign: inspect data with pandas

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,13 +17,17 @@ chardet==4.0.0
 click==7.1.2
 colorama==0.4.3
 coverage==5.4
+dask==2021.2.0
 decorator==4.4.2
 defusedxml==0.6.0
+deprecated==1.2.11
 docutils==0.15.2
 entrypoints==0.3
 flake8==3.8.4
+fsspec==0.8.5
 idna==2.10
 imagesize==1.2.0
+iniconfig==1.1.1
 ipykernel==5.4.3
 ipython==7.20.0
 ipython-genutils==0.2.0
@@ -42,6 +46,7 @@ jupyterlab==3.0.8
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.2.1
 jupyterlab-widgets==1.0.0
+locket==0.2.1
 markupsafe==1.1.1
 mccabe==0.6.1
 mistune==0.8.4
@@ -51,14 +56,20 @@ nbconvert==6.0.7
 nbformat==5.1.2
 nest-asyncio==1.5.1
 notebook==6.2.0
+numpy==1.20.1
 packaging==20.9
+pandas==1.2.2
+pandas-plink==2.2.4
 pandocfilters==1.4.3
 parso==0.8.1
+partd==1.1.0
 pexpect==4.8.0
 pickleshare==0.7.5
+pluggy==0.13.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
 ptyprocess==0.7.0
+py==1.10.0
 pyasn1==0.4.8
 pycodestyle==2.6.0
 pycparser==2.20
@@ -67,6 +78,7 @@ pyflakes==2.2.0
 pygments==2.8.0
 pyparsing==2.4.7
 pyrsistent==0.17.3
+pytest==6.2.2
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2021.1
@@ -90,9 +102,15 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 terminado==0.9.2
 testpath==0.4.4
+toml==0.10.2
+toolz==0.11.1
 tornado==6.1
+tqdm==4.57.0
 traitlets==5.0.5
 urllib3==1.26.3
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+wrapt==1.12.1
+xarray==0.16.2
+zstandard==0.15.1
