--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ parso==0.8.1
 partd==1.1.0
 pexpect==4.8.0
 pickleshare==0.7.5
+plinkio==0.9.8
 pluggy==0.13.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
