--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -9,6 +9,10 @@ services:
 
     container_name: smarter-mongo
 
+    # start a replica set (with 1 node) and enable transaction
+    # https://stackoverflow.com/a/61847298/4385116
+    command: mongod --auth --bind_ip_all --replSet rs0 --keyFile /home/mongodb/replica_set_keyfile.txt
+
     ports:
       - 27017:27017
 
