--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ locket==0.2.1
 markupsafe==1.1.1
 mccabe==0.6.1
 mistune==0.8.4
+mongoengine==0.22.1
 nbclassic==0.2.6
 nbclient==0.5.2
 nbconvert==6.0.7
