--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ jupyterlab-pygments==0.1.2
 jupyterlab-server==2.2.1
 jupyterlab-widgets==1.0.0
 locket==0.2.1
+lxml==4.6.2
 markupsafe==1.1.1
 mccabe==0.6.1
 mistune==0.8.4
