--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ lxml==4.6.2
 markupsafe==1.1.1
 mccabe==0.6.1
 mistune==0.8.4
-mongoengine==0.22.1
+mongoengine==0.23.0
 nbclassic==0.2.6
 nbclient==0.5.2
 nbconvert==6.0.7
@@ -72,6 +72,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 plinkio==0.9.8
 pluggy==0.13.1
+pockets==0.9.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
 ptyprocess==0.7.0
@@ -106,6 +107,7 @@ sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-napoleon==0.7
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 terminado==0.9.2
