--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,25 @@
+
+[tox]
+envlist = py39,flake8
+
 [flake8]
 max-line-length = 79
 max-complexity = 10
+
+[testenv:flake8]
+basepython = python
+deps = flake8
+commands = flake8 src
+
+[testenv]
+setenv =
+    PYTHONPATH = {toxinidir}
+; passenv =
+;     TRAVIS
+;     TRAVIS_BRANCH
+;     TRAVIS_JOB_ID
+deps =
+    -r{toxinidir}/requirements.txt
+commands =
+    coverage run --source src -m py.test --basetemp={envtmpdir}
+    coverage report -m
