--- a/requirements.txt
+++ b/requirements.txt
@@ -17,13 +17,16 @@ chardet==4.0.0
 click==7.1.2
 colorama==0.4.3
 coverage==5.4
+cycler==0.10.0
 dask==2021.2.0
 decorator==4.4.2
 defusedxml==0.6.0
 deprecated==1.2.11
+distlib==0.3.1
 docutils==0.15.2
 entrypoints==0.3
 et-xmlfile==1.0.1
+filelock==3.0.12
 flake8==3.8.4
 fsspec==0.8.5
 idna==2.10
@@ -48,9 +51,11 @@ jupyterlab==3.0.8
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.2.1
 jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
 locket==0.2.1
 lxml==4.6.2
 markupsafe==1.1.1
+matplotlib==3.3.4
 mccabe==0.6.1
 mistune==0.8.4
 mongoengine==0.23.0
@@ -70,6 +75,7 @@ parso==0.8.1
 partd==1.1.0
 pexpect==4.8.0
 pickleshare==0.7.5
+pillow==8.1.2
 plinkio==0.9.8
 pluggy==0.13.1
 pockets==0.9.1
@@ -119,6 +125,7 @@ tox==3.23.0
 tqdm==4.57.0
 traitlets==5.0.5
 urllib3==1.26.3
+virtualenv==20.4.2
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
