--- a/requirements.txt
+++ b/requirements.txt
@@ -109,6 +109,7 @@ six==1.15.0
 sniffio==1.2.0
 snowballstemmer==2.1.0
 sphinx==3.5.0
+sphinx-rtd-theme==0.5.1
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==1.0.3
