:white_check_mark: start testing smarterdb feature module

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 
 [tox]
-envlist = py39,flake8
+envlist = clean,py39,flake8,report
 
 [flake8]
 max-line-length = 79
@@ -10,6 +10,19 @@ max-complexity = 10
 basepython = python
 deps = flake8
 commands = flake8 src
+
+[testenv:report]
+deps =
+    coverage
+skip_install = true
+commands =
+    coverage report -m
+    coverage html
+
+[testenv:clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
 
 [testenv]
 setenv =
@@ -21,5 +34,7 @@ setenv =
 deps =
     -r{toxinidir}/requirements.txt
 commands =
-    coverage run --source src -m py.test --basetemp={envtmpdir}
-    coverage report -m
+    coverage run --append --source src -m py.test --basetemp={envtmpdir}
+depends =
+    {py39}: clean
+    report: py36
