--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@
 # external requirements
 alabaster==0.7.12
 anyio==2.1.0
+appdirs==1.4.4
 argon2-cffi==20.1.0
 async-generator==1.10
 attrs==20.3.0
@@ -59,6 +60,7 @@ matplotlib==3.3.4
 mccabe==0.6.1
 mistune==0.8.4
 mongoengine==0.23.0
+mongomock==3.22.1
 nbclassic==0.2.6
 nbclient==0.5.2
 nbconvert==6.0.7
@@ -105,6 +107,7 @@ requests==2.25.1
 rsa==4.5
 s3transfer==0.3.4
 send2trash==1.5.0
+sentinels==1.0.0
 six==1.15.0
 sniffio==1.2.0
 snowballstemmer==2.1.0
