--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
 click-option-group==0.5.2
+click-plugins==1.1.1
+cligj==0.7.1
 colorama==0.4.3
 coverage==5.4
 cycler==0.10.0
@@ -30,8 +32,12 @@ docutils==0.15.2
 entrypoints==0.3
 et-xmlfile==1.0.1
 filelock==3.0.12
+fiona==1.8.19
 flake8==3.8.4
 fsspec==0.8.5
+geographiclib==1.50
+geopandas==0.9.0
+geopy==2.1.0
 idna==2.10
 imagesize==1.2.0
 iniconfig==1.1.1
@@ -63,6 +69,7 @@ mccabe==0.6.1
 mistune==0.8.4
 mongoengine==0.23.0
 mongomock==3.22.1
+munch==2.5.0
 nbclassic==0.2.6
 nbclient==0.5.2
 nbconvert==6.0.7
@@ -96,6 +103,7 @@ pyflakes==2.2.0
 pygments==2.8.0
 pymongo==3.11.3
 pyparsing==2.4.7
+pyproj==3.0.1
 pyrsistent==0.17.3
 pytest==6.2.2
 python-dateutil==2.8.1
@@ -110,6 +118,7 @@ rsa==4.5
 s3transfer==0.3.4
 send2trash==1.5.0
 sentinels==1.0.0
+shapely==1.7.1
 six==1.15.0
 sniffio==1.2.0
 snowballstemmer==2.1.0
