--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -46,6 +46,8 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGODB_ROOT_USER}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGODB_ROOT_PASS}
+      ME_CONFIG_BASICAUTH_USERNAME: ${MONGOEXPRESS_USER}
+      ME_CONFIG_BASICAUTH_PASSWORD: ${MONGOEXPRESS_PASS}
 
     networks:
       - default
