--- a/.github/workflows/tox-workflow.yml
+++ b/.github/workflows/tox-workflow.yml
@@ -29,7 +29,7 @@ jobs:
           path: ~/conda_pkgs_dir
           key:
             ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{
-            hashFiles('etc/example-environment.yml') }}
+            hashFiles('environment.yml') }}
 
       - name: Setup conda
         uses: conda-incubator/setup-miniconda@v2
@@ -50,9 +50,18 @@ jobs:
             ${{ runner.os }}-pip-
             ${{ runner.os }}-
 
+      - name: Conda info
+        shell: bash -l {0}
+        run: conda info
+
       - name: Install dependencies
+        shell: bash -l {0}
         run: make requirements
 
+      - name: Conda list
+        shell: pwsh
+        run: conda list
+
       - name: Test with tox
-        run: |
-          tox
+        shell: bash -l {0}
+        run: tox
