:rewind: Revert ":construction_worker: add tox-gh-actions"
This reverts commit c526dd3487dfb14a0594f0978eca8d802c74b898.

--- a/.github/workflows/tox-workflow.yml
+++ b/.github/workflows/tox-workflow.yml
@@ -56,9 +56,7 @@ jobs:
 
       - name: Install dependencies
         shell: bash -l {0}
-        run: |
-          make requirements
-          pip install tox-gh-actions
+        run: make requirements
 
       - name: Conda list
         shell: pwsh
