:construction_worker: add tox-gh-actions

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,10 @@
 [tox]
 envlist = clean,py39,flake8,report
 
+[gh-actions]
+python =
+  3.9: py39
+
 [flake8]
 max-line-length = 79
 max-complexity = 10
