--- a/.github/workflows/tox-workflow.yml
+++ b/.github/workflows/tox-workflow.yml
@@ -56,7 +56,9 @@ jobs:
 
       - name: Install dependencies
         shell: bash -l {0}
-        run: make requirements
+        run: |
+          make requirements
+          pip install tox-gh-actions
 
       - name: Conda list
         shell: pwsh
