--- a/.github/workflows/pytest-workflow.yml
+++ b/.github/workflows/pytest-workflow.yml
@@ -1,5 +1,5 @@
 
-name: Tox Workflow
+name: Pytest Workflow
 
 on:
   # Trigger the workflow on push or pull request,
@@ -62,6 +62,6 @@ jobs:
         shell: pwsh
         run: conda list
 
-      - name: Test with tox
+      - name: Test with pytest
         shell: bash -l {0}
-        run: tox
+        run: pytest
