--- a/.github/workflows/pytest-workflow.yml
+++ b/.github/workflows/pytest-workflow.yml
@@ -14,7 +14,7 @@ on:
       - devel
 
 jobs:
-  build:
+  pytest:
     runs-on: ubuntu-latest
 
     steps:
@@ -66,7 +66,15 @@ jobs:
         shell: bash -l {0}
         run: coverage run --source src -m py.test
 
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+  coveralls:
+    name: Indicate completion to coveralls.io
+    needs: pytest
+    runs-on: ubuntu-latest
+    container: python:3-slim
+    steps:
+    - name: Finished
+      run: |
+        pip3 install --upgrade coveralls
+        coveralls
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
