--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ attrs==20.3.0
 awscli==1.19.88
 babel==2.9.0
 backcall==0.2.0
+biopython==1.79
 bleach==3.3.0
 botocore==1.20.88
 bump2version==1.0.1
