:monocle_face: explore new goat coordinates dataset

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = clean,py39,flake8,report
 [flake8]
 max-line-length = 79
 max-complexity = 10
+exclude = .ipynb_checkpoints
 
 [testenv:flake8]
 basepython = python
