--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 
 # external requirements
 alabaster==0.7.12
-anyio==2.1.0
+anyio==3.3.0
 appdirs==1.4.4
 argon2-cffi==20.1.0
 async-generator==1.10
@@ -56,10 +56,10 @@ jupyter==1.0.0
 jupyter-client==6.1.11
 jupyter-console==6.2.0
 jupyter-core==4.7.1
-jupyter-server==1.3.0
-jupyterlab==3.0.8
+jupyter-server==1.10.2
+jupyterlab==3.0.17
 jupyterlab-pygments==0.1.2
-jupyterlab-server==2.2.1
+jupyterlab-server==2.7.2
 jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
 locket==0.2.1
@@ -76,7 +76,7 @@ nbclient==0.5.2
 nbconvert==6.0.7
 nbformat==5.1.2
 nest-asyncio==1.5.1
-notebook==6.2.0
+notebook==6.4.1
 numpy==1.20.1
 openpyxl==3.0.6
 packaging==20.9
@@ -115,6 +115,7 @@ pyzmq==22.0.3
 qtconsole==5.0.2
 qtpy==1.9.0
 requests==2.25.1
+requests-unixsocket==0.2.0
 rsa==4.7
 s3transfer==0.4.2
 send2trash==1.5.0
@@ -144,6 +145,7 @@ urllib3==1.26.5
 virtualenv==20.4.2
 wcwidth==0.2.5
 webencodings==0.5.1
+websocket-client==1.2.1
 widgetsnbextension==3.5.1
 wrapt==1.12.1
 xarray==0.16.2
