--- a/requirements.txt
+++ b/requirements.txt
@@ -88,7 +88,7 @@ partd==1.1.0
 pexpect==4.8.0
 pickleshare==0.7.5
 pillow==8.3.2
-plinkio==0.9.8
+plinkio @ git+https://github.com/bunop/libplinkio.git@issue-29
 pluggy==0.13.1
 pockets==0.9.1
 prometheus-client==0.9.0
