--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ distlib==0.3.1
 docutils==0.15.2
 entrypoints==0.3
 et-xmlfile==1.0.1
+fastjsonschema==2.15.3
 filelock==3.0.12
 Fiona==1.8.19
 flake8==3.8.4
@@ -58,7 +59,7 @@ jupyter==1.0.0
 jupyter-client==7.0.2
 jupyter-console==6.2.0
 jupyter-core==4.7.1
-jupyter-server==1.10.2
+jupyter-server==1.15.4
 jupyterlab==3.1.9
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.7.2
@@ -76,9 +77,9 @@ munch==2.5.0
 nbclassic==0.3.1
 nbclient==0.5.2
 nbconvert==6.0.7
-nbformat==5.1.2
+nbformat==5.4.0
 nest-asyncio==1.5.1
-notebook==6.4.1
+notebook==6.4.10
 numpy==1.21.0
 openpyxl==3.0.6
 packaging==20.9
@@ -89,7 +90,7 @@ parso==0.8.1
 partd==1.1.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.0.0
+Pillow==9.0.1
 plinkio @ git+https://github.com/bunop/libplinkio.git@bc1c13507cf5c2d60ffe20e12a1997021f37ceb4
 pluggy==0.13.1
 pockets==0.9.1
@@ -121,7 +122,7 @@ requests-unixsocket==0.2.0
 rsa==4.7
 rstcheck==3.3.1
 s3transfer==0.4.2
-Send2Trash==1.5.0
+Send2Trash==1.8.0
 sentinels==1.0.0
 Shapely==1.7.1
 six==1.15.0
@@ -143,7 +144,7 @@ toolz==0.11.1
 tornado==6.1
 tox==3.23.0
 tqdm==4.57.0
-traitlets==5.0.5
+traitlets==5.2.1.post0
 urllib3==1.26.5
 virtualenv==20.4.2
 wcwidth==0.2.5
