--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ attrs==20.3.0
 awscli==1.19.88
 Babel==2.9.1
 backcall==0.2.0
+beautifulsoup4==4.11.1
 biopython==1.79
 bleach==3.3.0
 botocore==1.20.88
@@ -44,6 +45,7 @@ geopandas==0.9.0
 geopy==2.1.0
 idna==2.10
 imagesize==1.2.0
+importlib-metadata==4.12.0
 iniconfig==1.1.1
 ipykernel==5.4.3
 ipython==7.31.1
@@ -51,7 +53,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jdcal==1.4.1
 jedi==0.18.0
-Jinja2==2.11.3
+Jinja2==3.1.2
 jmespath==0.10.0
 json5==0.9.5
 jsonschema==3.2.0
@@ -67,16 +69,17 @@ jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
 locket==0.2.1
 lxml==4.9.1
-MarkupSafe==1.1.1
+MarkupSafe==2.1.1
 matplotlib==3.3.4
+matplotlib-inline==0.1.3
 mccabe==0.6.1
-mistune==0.8.4
+mistune==2.0.4
 mongoengine==0.23.1
 mongomock==3.22.1
 munch==2.5.0
 nbclassic==0.3.1
 nbclient==0.5.2
-nbconvert==6.0.7
+nbconvert==7.0.0
 nbformat==5.4.0
 nest-asyncio==1.5.1
 notebook==6.4.12
@@ -128,6 +131,7 @@ Shapely==1.7.1
 six==1.15.0
 sniffio==1.2.0
 snowballstemmer==2.1.0
+soupsieve==2.3.2.post1
 Sphinx==3.5.0
 sphinx-rtd-theme==0.5.1
 sphinxcontrib-applehelp==1.0.2
@@ -139,6 +143,7 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 terminado==0.9.2
 testpath==0.4.4
+tinycss2==1.1.1
 toml==0.10.2
 toolz==0.11.1
 tornado==6.1
@@ -154,4 +159,5 @@ widgetsnbextension==3.5.1
 wrapt==1.12.1
 xarray==0.16.2
 xlrd==2.0.1
+zipp==3.8.1
 zstandard==0.15.1
