--- a/requirements.txt
+++ b/requirements.txt
@@ -133,6 +133,7 @@ sniffio==1.2.0
 snowballstemmer==2.1.0
 soupsieve==2.3.2.post1
 Sphinx==5.1.1
+sphinx-click==4.3.0
 sphinx-rtd-theme==1.0.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
