:pencil2: fix history typos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,15 +3,18 @@
     "cSpell.words": [
         "affymetrix",
         "BIOINFO",
+        "chroms",
         "conda",
         "Cookiecutter",
         "dotenv",
         "Ensembl",
+        "Frizarta",
         "INITDB",
         "mongodump",
         "mongoexpress",
         "mongorestore",
         "pardir",
+        "plinkio",
         "SGID",
         "SNPCHIMP",
         "tabix",
