:whale: explicit $HOME in docker container

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "esbonio.sphinx.confDir": "",
     "cSpell.words": [
         "affymetrix",
+        "autoclass",
         "BIOINFO",
         "chroms",
         "conda",
