:rotating_light: ignore mongomock warnings

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,5 @@
 [pytest]
 norecursedirs = .git database
+filterwarnings =
+    ignore:No 'json_options' are specified.*:DeprecationWarning
+    ignore:No uuidRepresentation is specified.*:DeprecationWarning
