:memo: document smarterdb classes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "pardir",
         "plinkio",
         "SGID",
+        "smarterdb",
         "SNPCHIMP",
         "tabix",
         "vcftools"
