:memo: document importing samples

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "esbonio.sphinx.confDir": "",
     "cSpell.words": [
+        "AFFIMETRIX",
         "affymetrix",
         "autoclass",
         "BIOINFO",
