--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ decorator==4.4.2
 defusedxml==0.6.0
 Deprecated==1.2.11
 distlib==0.3.1
+distro==1.8.0
 docutils==0.15.2
 entrypoints==0.3
 et-xmlfile==1.0.1
@@ -143,6 +144,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-napoleon==0.7
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
+tabula-py==2.6.0
 terminado==0.9.2
 testpath==0.4.4
 tinycss2==1.1.1
