--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ alabaster==0.7.12
 anyio==3.3.0
 appdirs==1.4.4
 argon2-cffi==20.1.0
+asttokens==2.2.1
 async-generator==1.10
 attrs==20.3.0
 autodocsumm==0.2.9
@@ -38,6 +39,7 @@ docutils==0.15.2
 entrypoints==0.3
 et-xmlfile==1.0.1
 exceptiongroup==1.0.4
+executing==1.2.0
 fastjsonschema==2.15.3
 filelock==3.0.12
 Fiona==1.8.19
@@ -51,7 +53,7 @@ imagesize==1.2.0
 importlib-metadata==4.12.0
 iniconfig==1.1.1
 ipykernel==5.4.3
-ipython==7.31.1
+ipython==8.10.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jdcal==1.4.1
@@ -102,8 +104,9 @@ plinkio @ git+https://github.com/bunop/libplinkio.git@bc1c13507cf5c2d60ffe20e12a
 pluggy==0.13.1
 pockets==0.9.1
 prometheus-client==0.9.0
-prompt-toolkit==3.0.16
+prompt-toolkit==3.0.37
 ptyprocess==0.7.0
+pure-eval==0.2.2
 py==1.10.0
 pyasn1==0.4.8
 pycodestyle==2.6.0
@@ -146,6 +149,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-napoleon==0.7
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
+stack-data==0.6.2
 tabula-py==2.6.0
 terminado==0.9.2
 testpath==0.4.4
