--- a/requirements.txt
+++ b/requirements.txt
@@ -108,6 +108,7 @@ prompt-toolkit==3.0.37
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py==1.10.0
+pyarrow==11.0.0
 pyasn1==0.4.8
 pycodestyle==2.6.0
 pycountry==20.7.3
@@ -116,6 +117,7 @@ pyensemblrest==0.2.3
 pyflakes==2.2.0
 Pygments==2.8.0
 pymongo==3.11.3
+pymongoarrow==0.7.0
 pyparsing==2.4.7
 pyproj==3.0.1
 pyrsistent==0.17.3
