--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ bump2version==1.0.1
 certifi==2022.12.7
 cffi==1.14.5
 chardet==4.0.0
+charset-normalizer==3.1.0
 click==7.1.2
 click-option-group==0.5.2
 click-plugins==1.1.1
