:arrow_up: update pytest and remove py

--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ setenv =
 deps =
     -r{toxinidir}/requirements.txt
 commands =
-    coverage run --append --source src -m py.test --basetemp={envtmpdir}
+    coverage run --append --source src -m pytest --basetemp={envtmpdir}
 depends =
     {py39}: clean
     report: py39
