--- a/.github/workflows/pytest-workflow.yml
+++ b/.github/workflows/pytest-workflow.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Test with coverage
         shell: bash -l {0}
-        run: coverage run --source src -m py.test
+        run: coverage run --source src -m pytest
 
       - name: Uploading coverage to coveralls
         shell: bash -l {0}
