--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ alabaster==0.7.12
 anyio==3.3.0
 appdirs==1.4.4
 argon2-cffi==20.1.0
+arrow==1.2.3
 asttokens==2.2.1
 async-generator==1.10
-attrs==20.3.0
+async-lru==2.0.4
+attrs==23.1.0
 autodocsumm==0.2.9
 awscli==1.19.88
-Babel==2.9.1
+Babel==2.12.1
 backcall==0.2.0
 beautifulsoup4==4.11.1
 biopython==1.79
@@ -45,6 +47,7 @@ fastjsonschema==2.15.3
 filelock==3.0.12
 Fiona==1.8.19
 flake8==3.8.4
+fqdn==1.5.1
 fsspec==0.8.5
 geographiclib==1.50
 geopandas==0.9.0
@@ -57,20 +60,26 @@ ipykernel==5.4.3
 ipython==8.10.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
+isoduration==20.11.0
 jdcal==1.4.1
 jedi==0.18.0
 Jinja2==3.1.2
 jmespath==0.10.0
 json5==0.9.5
-jsonschema==3.2.0
+jsonpointer==2.4
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
 jupyter==1.0.0
-jupyter-client==7.0.2
+jupyter-client==8.3.1
 jupyter-console==6.2.0
 jupyter-core==5.1.0
-jupyter-server==1.17.0
-jupyterlab==3.1.9
+jupyter-events==0.7.0
+jupyter-lsp==2.2.0
+jupyter-server==2.7.3
+jupyter-server-terminals==0.4.4
+jupyterlab==4.0.5
 jupyterlab-pygments==0.1.2
-jupyterlab-server==2.7.2
+jupyterlab-server==2.24.0
 jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
 locket==0.2.1
@@ -83,15 +92,17 @@ mistune==2.0.4
 mongoengine==0.24.2
 mongomock==4.1.2
 munch==2.5.0
-nbclassic==0.3.1
+nbclassic==1.0.0
 nbclient==0.5.2
 nbconvert==7.0.0
 nbformat==5.4.0
 nest-asyncio==1.5.1
 notebook==6.4.12
+notebook-shim==0.2.3
 numpy==1.22.0
 openpyxl==3.0.6
-packaging==20.9
+overrides==7.4.0
+packaging==23.1
 pandas==1.2.2
 pandas-plink==2.2.4
 pandocfilters==1.4.3
@@ -108,6 +119,7 @@ prometheus-client==0.9.0
 prompt-toolkit==3.0.37
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
 pyasn1==0.4.8
 pycodestyle==2.6.0
 pycountry==20.7.3
@@ -120,19 +132,24 @@ pyparsing==2.4.7
 pyproj==3.0.1
 pyrsistent==0.17.3
 pytest==7.4.0
-python-dateutil==2.8.1
+python-dateutil==2.8.2
 python-dotenv==0.15.0
+python-json-logger==2.0.7
 pytz==2021.1
 PyYAML==5.4
-pyzmq==22.0.3
+pyzmq==25.1.1
 qtconsole==5.0.2
 QtPy==1.9.0
+referencing==0.30.2
 requests==2.31.0
 requests-unixsocket==0.2.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.10.2
 rsa==4.7
 rstcheck==3.3.1
 s3transfer==0.4.2
-Send2Trash==1.8.0
+Send2Trash==1.8.2
 sentinels==1.0.0
 Shapely==1.7.1
 six==1.15.0
@@ -161,9 +178,12 @@ tornado==6.3.3
 tox==3.23.0
 tqdm==4.57.0
 traitlets==5.8.0
+typing-extensions==4.7.1
+uri-template==1.3.0
 urllib3==1.26.5
 virtualenv==20.4.2
 wcwidth==0.2.5
+webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.2.1
 widgetsnbextension==3.5.1
