:sparkles: Add data for Guisandesa goats

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,15 +12,19 @@
         "Ensembl",
         "Frizarta",
         "INITDB",
+        "mapdata",
         "mongodump",
         "mongoexpress",
         "mongorestore",
         "pardir",
+        "pedfile",
         "plinkio",
+        "probeset",
         "SGID",
         "smarterdb",
         "SNPCHIMP",
         "tabix",
+        "tqdm",
         "vcftools"
     ]
 }
