:rotating_light: update filterwarnings

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,6 @@ norecursedirs = .git database
 filterwarnings =
     ignore:No 'json_options' are specified.*:DeprecationWarning
     ignore:No uuidRepresentation is specified.*:DeprecationWarning
+    ignore:pkg_resources is deprecated as an API.*:DeprecationWarning
+    ignore:datetime.datetime.utcnow.*is deprecated and scheduled for removal in a future version.*:DeprecationWarning
+    ignore: Country's official_name not found. Country name provided instead.*:UserWarning
