:bug: fix issues related to sphinx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,9 @@
         "INITDB",
         "mapdata",
         "mongodump",
+        "mongoengine",
         "mongoexpress",
+        "mongomock",
         "mongorestore",
         "pardir",
         "pedfile",
