--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ openpyxl = "^3.1.2"
 click-option-group = "^0.5.6"
 mongomock = "^4.1.2"
 flake8 = "^7.0.0"
+sphinx = "^7.3.7"
+sphinx-rtd-theme = "^2.0.0"
+sphinx-click = "^6.0.0"
+autodocsumm = "^0.2.12"
 
 
 [build-system]
