--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "pedfile",
         "plinkio",
         "probeset",
+        "pycountry",
         "SGID",
         "smarterdb",
         "SNPCHIMP",
