--- a/pytest.ini
+++ b/pytest.ini
@@ -5,4 +5,5 @@ filterwarnings =
     ignore:No uuidRepresentation is specified.*:DeprecationWarning
     ignore:pkg_resources is deprecated as an API.*:DeprecationWarning
     ignore:datetime.datetime.utcnow.*is deprecated and scheduled for removal in a future version.*:DeprecationWarning
-    ignore: Country's official_name not found. Country name provided instead.*:UserWarning
+    ignore:Country.s official_name not found. Country name provided instead.*:UserWarning
+    ignore:Deprecated call to .pkg_resources.declare_namespace.'sphinxcontrib'.*:DeprecationWarning
