--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ autodocsumm = "^0.2.12"
 matplotlib = "^3.9.0"
 shapely = "^2.0.4"
 geopandas = "^0.14.4"
+pyensemblrest = "^0.2.3"
+ipywidgets = "^8.1.2"
+geopy = "^2.4.1"
 
 
 [build-system]
