:monocle_face: test sheep countries with reverse geocoding

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,10 @@
         "dotenv",
         "Ensembl",
         "Frizarta",
+        "geocoders",
+        "geodatasets",
+        "geopandas",
+        "geopy",
         "INITDB",
         "mapdata",
         "mongodump",
@@ -18,6 +22,8 @@
         "mongoexpress",
         "mongomock",
         "mongorestore",
+        "naturalearth",
+        "Nominatim",
         "pardir",
         "pedfile",
         "plinkio",
