--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ geopandas = "^0.14.4"
 pyensemblrest = "^0.2.3"
 ipywidgets = "^8.1.2"
 geopy = "^2.4.1"
+geodatasets = "^2023.12.0"
 
 
 [build-system]
