--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,10 @@ pyensemblrest = "^0.2.3"
 ipywidgets = "^8.1.2"
 geopy = "^2.4.1"
 geodatasets = "^2023.12.0"
+scipy = "^1.14.1"
+plotly = "^5.24.1"
+ete3 = "^3.1.3"
+pyqt5 = "^5.15.11"
 
 
 [build-system]
