--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ scikit-bio = "^0.6.2"
 plotly = "^5.24.1"
 scikit-learn = "^1.5.2"
 nbstripout = "^0.7.1"
+umap-learn = "^0.5.6"
 
 
 [build-system]
