:zap: simplify renv setup
Attempting to simplify the renv initializatioin by
avoiding the package discovering (``renv::dependencies()`` step)
and track all the packages inside renv folder

--- a/.renvignore
+++ b/.renvignore
@@ -1,16 +1,17 @@
-*pycache*
-.github/
-.pytest_cache/
-.spyproject/
-.tox/
-data/
-database/
-docs/
-htmlcov/
-test/
-*.zip
-*.bed
-*.bim
-*.fam
-*.py
-*.pyc
+data
+database
+docs
+.git
+.github
+htmlcov
+models
+__pycache__
+.pytest_cache
+references
+renv
+reports
+src
+src.egg-info
+tests
+.tox
+.vscode
